# smart-code-review

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
__docs__/: ENTITY_SERVICE.md  IMPACT_SERVICE.md  REVIEW_BATCHING.md
app/: config.py  constants.py  main.py
app/services/: budget_tracker.py  entity_service.py  git_service.py  llm_service.py  prompts.py  review_service.py
app/services/impact/: __init__.py  ast_parser.py  call_graph.py  config.py  file_scanner.py  impact_analyzer.py  models.py  service.py
